# Akamata

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon  utf8_test
.github/workflows/: ci.yml  release.yml
deploy/: Dockerfile  wrangler.toml
deploy/guestbook/: wrangler.toml
deploy/mobus/: Dockerfile  wrangler.toml
deploy/worker/: chat_room.mjs  d1_schema.sql  index.mjs
docs/: architecture.md  benchmarks-long-run.md  benchmarks.md  cloudflare.md  db-backends.md  example-tasks.md  handbook.ja.md  handbook.md  handler-api.md  hono-style-redesign.md  mobus-deployment.md  mobus-portability.md  observability.md  perf-followups.md  perf-reactor-design.md  quickstart.md  tutorial.ja.md  tutorial.md  v0.2-design.md  websocket.md
examples/bench/: .gitignore  resources.sh  resources_all.sh  run.sh  runall.sh  (+1 more)
examples/bench/rust/: Cargo.toml
examples/bench/rust/src/: main.rs
scripts/: install.sh
src/: akamata.zig  app.zig  client_gen.zig  context.zig  env.zig  errors.zig  http_client.zig  jobs.zig  json.zig  legacy_ctx.zig  log.zig  middleware.zig  mq.zig  negotiate.zig  openapi.zig  push.zig  router.zig  serve.zig  sse.zig  sync.zig  testing.zig
tests/: app_test.zig  bcrypt_test.zig  client_gen_test.zig  d1_mock_test.zig  db_factory_test.zig  db_sqlite_test.zig  etag_test.zig  http_parser_test.zig  integration_http_test.zig  jobs_test.zig  jwt_test.zig  middleware_test.zig  mobus_route_test.zig  model_internal_test.zig  model_schema_test.zig  mq_test.zig  negotiate_test.zig  openapi_test.zig  router_test.zig  testing_client_test.zig  ws_frame_test.zig
(+120 files in other folders)
